@@ -2,10 +2,11 @@ IDL_FILES = \
 	GDA.idl \
 	GDA_Connection.idl \
 	GDA_Command.idl \
-	GDA_Parameter.idl \
-	GDA_Recordset.idl \
+	GDA_Error.idl \
 	GDA_Field.idl \
-	GDA_Error.idl
+	GDA_Listener.idl \
+	GDA_Recordset.idl \
+	GDA_Parameter.idl
 
 EXTRA_DIST = \
 	$(IDL_FILES)
