@@ -1,3 +1,7 @@
+2001-07-08  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* GDA_Listener.idl: new interface
+
 2001-03-05	Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* added COMMAND_TYPE_XML to the GDA_CommandType enum
